fixing spacing issues on mobile and down arrow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -208,7 +208,7 @@
     text-align: center;
     font-size: 24px; }
   .section-wrap.intro {
-    padding: 60px 0 60px; }
+    padding: 30px 0 60px; }
   .intro.style-2 .intro-text p {
     font-size: 28px; }
   .footer-type-3,
