--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@
   @media (max-width: 991px) {
     .section-wrap-mp {
       padding: 60px 0; } }
+  @media (max-width: 767px) {
+    .section-wrap-mp {
+      padding: 30px 0 60px; } }
+  @media (max-width: 640px) {
+    .section-wrap-mp {
+      padding: 30px 0 60px; } }
 
 .color-white {
   color: #fff !important; }
